# noaa-spc-rss-watcher

./: Cargo.toml  README.md  example1.xml
.github/workflows/: rust.yml
src/: app.rs  main.rs
