[package]
name = "noaa-spc-rss-watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
noaa-spc-rss-parser = { git = "https://github.com/holzhey/noaa-spc-rss-parser.git" }
ratatui = "0.26.3"
